[tool.poetry]
name = "osgameclones"
version = "1.0.0"
description = "Open Source Game Clones"
authors = ["Alexander Solovyov <alexander@solovyov.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
natsort = "8.0.0"
pykwalify = "1.8.0"
pykwalify-webform = "0.2.1"
PyYAML = "6.0"
Unidecode = "1.3.2"
htmlmin = "0.1.12"
jinja2 = "3.0.3"
python-slugify = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
